--- a/templates/components/profile.html
+++ b/templates/components/profile.html
@@ -29,7 +29,7 @@
                         <tr>
                             <td>Hobbies</td>
                             <td>:</td>
-                            <td>Diving, Reading Book</td>
+                            <td>{{info.hobbies}}</td>
                         </tr>
                         <tr>
                             <td>Job</td>
@@ -39,7 +39,7 @@
                         <tr>
                             <td>Skill</td>
                             <td>:</td>
-                            <td>PHP, HTML, CSS, Java</td>
+                            <td>{{info.skills}}</td>
                         </tr>
                     </tbody>
                 </table>
