Profile Update functionality

--- a/templates/components/profile.html
+++ b/templates/components/profile.html
@@ -41,6 +41,11 @@
                             <td>:</td>
                             <td>{{info.skills}}</td>
                         </tr>
+                        <tr>
+                            <td>About</td>
+                            <td>:</td>
+                            <td>{{info.about}}</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
