--- a/templates/components/update_record.html
+++ b/templates/components/update_record.html
@@ -12,7 +12,7 @@
     {% else %}
         <img src="{% static 'img/default_profile.jpg' %}" alt="Default Profile Picture" class="profile_img">
     {% endif %}
-    <button type="submit" value="Submit">Update Record</button>
+    <button type="submit" value="Submit" class='button-9'>Update Record</button>
 </form>
 </div>
 {% endblock %}
