--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
         <script src="https://kit.fontawesome.com/52d2e4e65f.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     </head>
+    <script type="text/javascript" src="{%static 'js/session.js'%}"></script>
+    
     <body>
         <header class="header">
             
