--- a/templates/components/users.html
+++ b/templates/components/users.html
@@ -24,7 +24,7 @@
         <td>{{employee.username}}</td>
         <td>{{employee.role}}</td>
         <td><a ahref="#Edit"><button>Edit</button></a></td>
-        <td><a ahref="#Delete"><button>Delete</button></a></td>
+        <td><a ahref=""><button>Delete</button></a></td>
     </tr>
 {% endfor %}
 </table><br><br><br>
