--- a/templates/components/dashboard.html
+++ b/templates/components/dashboard.html
@@ -8,13 +8,14 @@
         padding:25px;
         grid-area: main;
         display:grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 1fr 1fr ;
         gap:20px;
         grid-template-areas: 
-        "c1 c2 c3"
-        "c4 c4 c5"
-        "c4 c4 c6";
+        "c1 c2"
+        "c3 c4"
+        "c5 c5"
+        "c5 c5";
     }
     
     .order-card {
@@ -22,7 +23,7 @@
     }
     
     .bg-c-blue {
-        background: linear-gradient(45deg,#4099ff,#73b4ff);
+        background: linear-gradient(to left,rgb(141, 226, 13), rgb(74, 122, 1));
     }
     
     .bg-c-green {
@@ -46,6 +47,7 @@
         margin-bottom: 30px;
         -webkit-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
+        height:200px;
     }
     
     .card .card-block {
@@ -65,13 +67,7 @@
     }
 </style>
 <div class="container">
-    {%if messages %}
-            {%for message in messages%}
-                <div class="alert alert-primary" role="alert">
-                {{message}}
-                </div>
-            {% endfor %}
-        {% endif %}    
+       
     <div class="main-x">
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
@@ -83,35 +79,36 @@
                 </div>
             </div>
         </div>
-        
         <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-green order-card">
+            <div class="card bg-c-blue order-card">
                 <div class="card-block">
                     <h2 class="m-b-20">Departments</h2>
-                    <span class="material-symbols-outlined">
-                        keyboard_alt
+                    <h1 class="text-right"><span class="material-symbols-outlined">
+                        badge
                         </span><span>{{department_count}}</span></h1>
                 </div>
             </div>
         </div>
-        
         <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-yellow order-card">
+            <div class="card bg-c-blue order-card">
                 <div class="card-block">
                     <h2 class="m-b-20">On Leave</h2>
-                    <span class="material-symbols-outlined">
-                        holiday_village
+                    <h1 class="text-right"><span class="material-symbols-outlined">
+                        badge
                         </span><span>{{leaves_count}}</span></h1>
                 </div>
             </div>
         </div>
         
+        
+        
         <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-pink order-card">
+            <div class="card bg-c-blue order-card">
                 <div class="card-block">
-                    <h6 class="m-b-20">Orders Received</h6>
-                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>486</span></h2>
-                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+                    <h2 class="m-b-20">Total Working Hours This Week</h2>
+                    <h1 class="text-right"><span class="material-symbols-outlined">
+                        schedule
+                        </span><span>{{total_hours_this_week}}</h1>
                 </div>
             </div>
         </div>
