--- a/templates/components/employee_create.html
+++ b/templates/components/employee_create.html
@@ -6,6 +6,7 @@
     <ul name="create" style="font-family: poppins, sans-serif; font-size: 0.88rem;">
         <li><a href="{%url 'employees'%}" {% if  request.path == '/employees/' %}class="active"{% endif %}><h3>Employees</h3></a></li>
         <li><a href="{% url 'employee_create'%}" {% if '/employee_create/' in request.path %}class="active"{% endif %}><h3>Create Employee</h3></a></li>
+        <li><a href="{% url 'users'%}"{% if '/users/' in request.path %}class="active"{% endif %}><h3>Users</h3></a></li>
         <li><a href="{% url 'user_create'%}"{% if '/user_create/' in request.path %}class="active"{% endif %}><h3>Create User</h3></a></li>
     </ul>
     {% endif %}
