--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,99 +2,131 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-#body{
-  display: block;
-  margin-left:  100px;
-  margin-right:  100px;
-  background-color: #E3EAEA;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.active {
-  background-color: #04AA6D;
-}
-.carousel-container {
-  width: 707px; /* Example width, adjust as needed */
-  height: 259px; /* Example height, adjust as needed */
-  overflow: hidden; /* Ensures that images exceeding the container size are hidden */
-}
-
-.carousel img {
-  max-width: 100%; /* Ensures images don't exceed the container width */
-  max-height: 100%; /* Ensures images don't exceed the container height */
-  height: auto; /* Allows maintaining aspect ratio */
-  width: auto; /* Allows maintaining aspect ratio */
-}
-</style>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<title>Synergy Tech</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li style="float:right"><a class="active" href="login">Login</a></li>
-</ul>
-<div class="container">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="{%static 'img/synergy.png'%}" alt="Synergy" style="width:100%;">
-      </div>
-
-    
-      <div class="item">
-        <img src="{%static 'img/azgutor.png'%}" alt="New york" style="width:100%;">
-      </div>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-margin-bottom w3-card">
+    <a href="#home" class="w3-bar-item w3-button"><img src="{% static 'img/logo.png'%}" height='50px'></a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="login" class="w3-bar-item w3-button">Login</a>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
 
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide w3-margin-top-30" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="{% static 'img/synergy.png'%}" alt="Architecture" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Synergy</b></span> <span class="w3-hide-small w3-text-light-grey">Tech</span></h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Our Clients</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/everest.png'%}" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/maha.png'%}" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/nibl.png'%}" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/access.png'%}" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/worldb.png'%}" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/dish.png'%}" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/nrb.png'%}" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="{%static 'img/ncell.png'%}" alt="House" style="width:99%">
+      </div>
+    </div>
+  </div>
+
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32" id="about">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">ABOUT SYNERGY</h3>
+    <p>
+      Synergy Tech is the ICT Solution based company, established on November 2007 AD under the Ministry of Industry and 
+      Commerce. The company operates its functions and administrations from main office located at B.K Bhawan, Sanepa Road.<br><br>
+      
+      Synergy Tech is the Authorized partner of Schneider Electric, a global specialist in energy management and automation.
+       The Company has a motive to ease customer to be a single stop enterprise provider for all kind of business solutions.
+        It has leading in providing essential business solutions in Information Technology & Communication sector and has an 
+        extensive experience in delivering high quality IT Infrastructure services for all kinds of verticals and technology 
+        environments.<br><br>
+      
+      
+      In today’s connected world, you deserve integrated solutions for the transformation of IT. Our proven industry
+       leadership has resulted in collaborative technology that delivers connectivity, reliability, and accessibility 
+       through simplified delivery and expert services. With a decade of service, we keep ourselves updated with technology
+        and accommodate the changes and challenges faced with todays business environment. We beliefs to make your 
+        organization safe, secure and up to date with technology.<br><br>
+      
+      
+      "We believe that great people and partners make Synergy tech a great company and that our commitment to Innovation,
+       Diversity and Sustainability ensures that Life is on everywhere, for everyone and at every moment."<br>
+    </p>
+  </div>
+
+
+  <!-- Contact Section -->
+  <div class="w3-container w3-padding-32" id="contact">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+    <p>Lets get in touch and talk about your next project.</p>
+    <div class=" col-sm-4 col-md col-sm-4  col-12 col">
+      <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
+      <p><i class="fa fa-location-arrow"></i>  B.K Bhawan, Sanepa Road </p>
+      <p><i class="fa fa-phone"></i>  +977 -15441978, 15427934 </p>
+      <p><i class="fa fa fa-envelope"></i> info@synergytech.com.np  </p>
+      
+      
+      </div>
+  </div>
+  
+
+
 </body>
 </html>
-
-
